--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - 2.7
 before_install:
+  - sudo apt-get update
   - sudo apt-get install -qq libspatialite-dev
 install:
   - pip install -i http://tools.pacificclimate.org/pypiserver/ -r requirements.txt -r test_requirements.txt
