--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
 install:
   - pip install -i http://tools.pacificclimate.org/pypiserver/ -r requirements.txt -r test_requirements.txt
   - pip install .
-script: py.test -v --tb=short tests
+script: py.test -v --tb=short -m "not local_only" tests
