--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+sudo: false
 language: python
 python:
   - 2.7
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install -qq libspatialite-dev
+addons:
+  apt:
+    packages:
+      - libspatialite-dev
 install:
-  - pip install -i http://tools.pacificclimate.org/pypiserver/ -r requirements.txt -r test_requirements.txt
+  - pip install -i http://pypi.pacificclimate.org/simple/ -r requirements.txt -r test_requirements.txt
   - pip install .
 script: py.test -v --tb=short tests
