--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ addons:
     packages:
       - libspatialite-dev
 install:
-  - pip install -i http://pypi.pacificclimate.org/simple/ -r requirements.txt -r test_requirements.txt
+  - pip install -i https://pypi.pacificclimate.org/simple/ -r requirements.txt -r test_requirements.txt
   - pip install .
 script: py.test -v --tb=short tests
