Updates pypi URL in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist = py27
 indexserver =
-    default = http://tools.pacificclimate.org/pypiserver/
+    default = https://pypi.pacificclimate.org/simple/
 
 [testenv]
 deps =
