--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Beaker==1.6.4
-Genshi==0.7
-Paste==1.7.5.1
-Pillow==2.4.0
-PyYAML==3.11
-WebOb==1.4
+Beaker==1.10.0
+Genshi==0.7.1
+Paste==3.0.6
+Pillow==5.4.1
 PyCDS==2.2.1
+PyYAML==3.13
+WebOb==1.8.5
 modelmeta==0.0.5
-numpy==1.8.1
-openid2rp==1.12
+numpy==1.16.0
 pydap-pdp==3.2.2
 pydap.handlers.pcic==0.0.7
-python-dateutil==2.2
-pytz==2014.4
-simplejson==3.5.2
+python-dateutil==2.7.5
+pytz==2018.9
+simplejson==3.16.0
+psycopg2-binary==2.7.7
