--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 addons:
   apt:
     packages:
-      - libspatialite-dev
+      - postgresql-9.3-postgis-2.3
+
 install:
   - pip install -i https://pypi.pacificclimate.org/simple/ -r requirements.txt -r test_requirements.txt
   - pip install .
