--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,4 @@
-@Library('pcic-pipeline-library')_
+@Library('pcic-pipeline-library@python-test-suite-fixes')_
 
 
 node {
@@ -7,10 +7,10 @@ node {
     }
 
     stage('Python Test Suite') {
-        def pyImage = 'pcic/pdp_util-test-env:python-2.7'
+        def pyImage = 'pcic/test-env:python3.6'
         def requirements = ['requirements.txt', 'test_requirements.txt']
         def pytestArgs = '-vv --tb=short tests'
-        def options = [pythonVersion: 2]
+        def options = [pythonVersion: 2, containerData: "tester", selfInstall: false]
 
         runPythonTestSuite(pyImage, requirements, pytestArgs, options)
     }
@@ -25,7 +25,7 @@ node {
 
     if (isPypiPublishable()) {
         stage('Push to PYPI') {
-            publishPythonPackage('pcic/pdp_util-test-env:python-2.7', 'PCIC_PYPI_CREDS')
+            publishPythonPackage('pcic/test-env:python3.6', 'PCIC_PYPI_CREDS')
         }
     }
 
