--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
     slow: marks tests that are slow (deselect with '-m "not slow"')
+    online: marks tests that use online resources (deselect with '-m "not online"')
