--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ WebOb==1.8.5
 modelmeta==0.3.0
 numpy==1.16.0
 pydap-pdp==3.2.2
-pydap.handlers.pcic==0.0.7
+pydap==3.2.2
+#pydap.handlers.pcic==0.0.7
 python-dateutil==2.7.5
 pytz==2018.9
 simplejson==3.16.0
-psycopg2-binary==2.7.7
+psycopg2
