--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,8 @@ PyYAML==3.13
 WebOb==1.8.7
 modelmeta==0.3.0
 numpy==1.16.0
-#pydap-pdp==3.2.2
 pydap==3.2.2
-#pydap.handlers.pcic==0.0.7
+pydap-extras==0.1.1
 python-dateutil==2.7.5
 pytz==2018.9
 simplejson==3.16.0
