--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -16,9 +16,21 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install pipenv
+      run: |
+        pip install -U pipenv
+
+    - id: cache-pipenv
+      uses: actions/cache@v2
+      with:
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+    - name: Install dependencies if changed
+      if: steps.cache-pipenv.output.cache-hit != 'true'
+      run: |
+        pipenv install --deploy --dev
+
     - name: Install dependencies
-      env:
-        PIP_INDEX_URL: https://pypi.pacificclimate.org/simple
       run: |
         sudo apt-get install -y curl ca-certificates gnupg
         sudo curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
@@ -26,13 +38,11 @@ jobs:
         sudo apt-get update
         sudo apt purge postgresql-client-13 postgresql-server-dev-all
         sudo apt-get install libhdf5-serial-dev libnetcdf-dev libspatialite-dev postgresql-12-postgis-3
-        pip install -r requirements.txt -r test_requirements.txt
-        pip install .
     - name: Test with pytest (full)
       if: github.ref == 'refs/heads/master'
       run: |
-        py.test -m "not online" -v --tb=short tests
+        pipenv run py.test -m "not online" -v --tb=short tests
     - name: Test with pytest (fast)
       if: github.ref != 'refs/heads/master'
       run: |
-        py.test -m "not online and not slow" -v --tb=short tests
+        pipenv run py.test -m "not online and not slow" -v --tb=short tests
