--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -25,12 +25,7 @@ jobs:
       with:
         path: ~/.local/share/virtualenvs
         key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-    - name: Install dependencies if changed
-      if: steps.cache-pipenv.output.cache-hit != 'true'
-      run: |
-        pipenv install --deploy --dev
-
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get install -y curl ca-certificates gnupg
         sudo curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
@@ -38,6 +33,12 @@ jobs:
         sudo apt-get update
         sudo apt purge postgresql-client-13 postgresql-server-dev-all
         sudo apt-get install libhdf5-serial-dev libnetcdf-dev libspatialite-dev postgresql-12-postgis-3
+
+    - name: Install dependencies if changed
+      if: steps.cache-pipenv.output.cache-hit != 'true'
+      run: |
+        pipenv install --deploy --dev
+
     - name: Test with pytest (full)
       if: github.ref == 'refs/heads/master'
       run: |
