Pin pipenv to version 2022.1.8

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install pipenv
       run: |
-        pip install -U pipenv
+        pip install -U pipenv==2022.1.8
     - id: cache-pipenv
       uses: actions/cache@v2
       with:
