--- a/Pipfile
+++ b/Pipfile
@@ -29,7 +29,7 @@ WebOb = "==1.8.7"
 pytest = ">=4.1.1"
 beautifulsoup4 = "*"
 "testing.postgresql" = "*"
-black = "==20.8b1"
+black = "==22.3.0"
 pdp-util = {editable = true, path = "."}
 
 [requires]
