--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ alembic = "==1.3"
 pycds = "==2.2.1"
 modelmeta = "==0.3.0"
 numpy = "==1.16.0"
+pydap-extras = "==0.1.1"
 python-dateutil = "==2.7.5"
 pytz = "==2018.9"
 simplejson = "==3.16.0"
@@ -24,6 +25,7 @@ Paste = "==3.0.6"
 Pillow = "==5.4.1"
 PyYAML = "==3.13"
 WebOb = "==1.8.7"
+Pydap = "==3.2.2"
 
 [dev-packages]
 pytest = ">=4.1.1"
