--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ python = "^3.8"
 # TODO: Can we specify only a subset of these deps? Some may be subdeps.
 alembic = "==1.3"
 pycds = { version = "==2.2.1",  source = "pcic-pypi" }
-modelmeta = { version = "==0.3.0",  source = "pcic-pypi" }
+modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
 numpy = "==1.16.0"
 pydap-extras = { version = "==0.1.1",  source = "pcic-pypi" }
 python-dateutil = "==2.7.5"
