--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -11,19 +11,31 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.pcic_at_pypi_username }}
-        TWINE_PASSWORD: ${{ secrets.pcic_at_pypi_password }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload --repository-url https://pypi.pacificclimate.org/ --skip-existing -u $TWINE_USERNAME -p $TWINE_PASSWORD dist/*
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Install, build and publish project
+        env:
+          TWINE_USERNAME: ${{ secrets.pcic_at_pypi_username }}
+          TWINE_PASSWORD: ${{ secrets.pcic_at_pypi_password }}
+        run: |
+          # Configure Poetry to publish to PCIC private package repository
+          # Private repo name is "pcic". We could factor that out as an env var...
+          poetry config repositories.pcic https://pypi.pacificclimate.org/
+          poetry config http-basic.pcic $PCIC_PYPI_USERNAME $PCIC_PYPI_PASSWORD
+          
+          # Install project
+          poetry install --without dev
+  
+          # Build and publish
+          poetry build
+          poetry publish -r pcic
