--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,11 +60,12 @@ WebOb = "==1.8.7"
 Pydap = "==3.2.2"
 setuptools = "^69.0.2"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.test.dependencies]
 pytest = ">=4.1.1"
-beautifulsoup4 = "*"
 "testing.postgresql" = "*"
-black = "==20.8b1"
+
+[tool.poetry.group.black.dependencies]
+black = "23.11.0"
 
 [build-system]
 requires = ["poetry-core"]
