--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -26,12 +26,15 @@ jobs:
 
       - name: Install system dependencies
         run: |
+          # Add legacy repo and update
           sudo apt-get install -y curl ca-certificates gnupg
           sudo curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo echo 'deb http://apt.postgresql.org/pub/repos/apt focal-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list
           sudo apt-get update
-          sudo apt purge postgresql-client-13 postgresql-server-dev-all
-          sudo apt-get install libhdf5-serial-dev libnetcdf-dev libspatialite-dev postgresql-12-postgis-3
+          # Install postgresql extensions
+          sudo apt-get install postgresql-plpython3-14 postgresql-14-postgis-3
+          # Install remaining dependencies
+          sudo apt-get install libhdf5-serial-dev libnetcdf-dev libspatialite-dev
 
       - name: Install Poetry
         run: |
