--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,10 +8,12 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: psf/black@stable
-        with:
-          version: "23.11.0"
-          options: "--check"
-          src: "."
+      - name: Temporarily disabled
+        run: "echo 'Temporarily disabled'"
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-python@v2
+#      - uses: psf/black@stable
+#        with:
+#          version: "23.11.0"
+#          options: "--check"
+#          src: "."
