--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,24 +40,18 @@ priority = "supplemental"
 [tool.poetry.dependencies]
 python = "^3.8"
 # TODO: Updgrade and loosen version specs
-# TODO: Can we specify only a subset of these deps? Some may be subdeps.
-alembic = "==1.3"
-pycds = { version = "==2.2.1",  source = "pcic-pypi" }
+pycds = { version = "2.2.1",  source = "pcic-pypi" }
 modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
-numpy = "==1.16.0"
-pydap-extras = { version = "==0.1.1",  source = "pcic-pypi" }
-python-dateutil = "==2.7.5"
-pytz = "==2018.9"
-simplejson = "==3.16.0"
-psycopg2 = "*"
-SQLAlchemy = "==1.2.16"
-Beaker = "==1.10.0"
-Genshi = "==0.7.5"
-Paste = "==3.0.6"
-Pillow = "==5.4.1"
-PyYAML = "==3.13"
-WebOb = "==1.8.7"
-Pydap = "==3.2.2"
+pydap-extras = { version = "0.1.1",  source = "pcic-pypi" }
+Pydap = "3.2.2"
+SQLAlchemy = "1.2.16"
+pytz = "2018.9"
+simplejson = "3.16.0"
+Beaker = "1.10.0"
+Genshi = "0.7.5"
+Paste = "3.0.6"
+Pillow = "5.4.1"
+WebOb = "1.8.7"
 setuptools = "^69.0.2"
 
 [tool.poetry.group.test.dependencies]
