--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ pycds = { version = "2.2.1",  source = "pcic-pypi" }
 modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
 pydap-extras = { version = "0.1.1",  source = "pcic-pypi" }
 Pydap = "3.2.2"
-SQLAlchemy = "1.2.16"
+SQLAlchemy = "^1.3"
 pytz = "2018.9"
 simplejson = "3.16.0"
 Beaker = "1.10.0"
