--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ pytz = "2018.9"
 simplejson = "3.16.0"
 Beaker = "1.10.0"
 Genshi = "0.7.5"
-Paste = "3.0.6"
+Paste = "^3.7.1"
 Pillow = "5.4.1"
 WebOb = "1.8.7"
 setuptools = "^69.0.2"
