--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
 
+      # Installing this project is tricky, due to its dependency on GDAL 3.0.4.
+      # For an explanation, see the README.
       - name: Install, build and publish project
         env:
           TWINE_USERNAME: ${{ secrets.pcic_at_pypi_username }}
@@ -33,7 +35,11 @@ jobs:
           poetry config repositories.pcic https://pypi.pacificclimate.org/
           poetry config http-basic.pcic $PCIC_PYPI_USERNAME $PCIC_PYPI_PASSWORD
           
-          # Install project
+          # Pre-install initial packages (pip, setuptools, numpy) 
+          poetry install --only initial
+          # Install gdal using pip3 into the Poetry virtualenv
+          poetry run pip3 install gdal==3.0.4
+          # Install rest of project          
           poetry install --without test,black
   
           # Build and publish
