--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -40,8 +40,15 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
 
+      # Installing this project is tricky, due to its dependency on GDAL 3.0.4.
+      # For an explanation, see the README.
       - name: Install project
         run: |
+          # Pre-install initial packages (pip, setuptools, numpy) 
+          poetry install --only initial
+          # Install gdal using pip3 into the Poetry virtualenv
+          poetry run pip3 install gdal==3.0.4
+          # Install rest of project          
           poetry install --without black
 
       - name: Test with pytest (full)
