--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,19 @@ name = "pcic-pypi"
 url = "https://pypi.pacificclimate.org/simple/"
 priority = "supplemental"
 
+[tool.poetry.group.initial.dependencies]
+# These dependencies must be installed before those in any other groups,
+# including the main dependencies.
+pip = "22.3.1"
+setuptools = "<58"
+numpy = "^1.21"
+
 [tool.poetry.dependencies]
 python = "^3.8"
 # TODO: Updgrade and loosen version specs
 pycds = { version = "^4.4.0",  source = "pcic-pypi" }
 modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
-pydap-extras = { version = "0.1.1",  source = "pcic-pypi" }
+pydap-extras = { version = "^1.0.0",  source = "pcic-pypi" }
 Pydap = "3.2.2"
 SQLAlchemy = "^1.4"
 pytz = "2018.9"
@@ -52,7 +59,6 @@ Genshi = "0.7.5"
 Paste = "^3.7.1"
 Pillow = "5.4.1"
 WebOb = "1.8.7"
-setuptools = "^69.0.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=4.1.1"
