--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,6 +23,11 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libhdf5-serial-dev libnetcdf-dev libspatialite-dev libgdal-dev 
+
       # Installing this project is tricky, due to its dependency on GDAL 3.0.4.
       # For an explanation, see the README.
       - name: Install, build and publish project
