--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ pydap-extras = { version = "^1.0.0",  source = "pcic-pypi" }
 Pydap = "3.2.2"
 SQLAlchemy = "^1.4"
 pytz = "2018.9"
-simplejson = "3.16.0"
+simplejson = "^3.16.0"
 Beaker = "1.10.0"
 Genshi = "0.7.5"
 Paste = "^3.7.1"
