--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-# TODO: Absorb pytest.ini
-
 [tool.poetry]
 name = "pdp-util"
 version = "2.1.0"
@@ -46,7 +44,6 @@ numpy = "^1.21"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-# TODO: Updgrade and loosen version specs
 pycds = { version = "^4.4.0",  source = "pcic-pypi" }
 modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
 pydap-extras = { version = "^1.0.0",  source = "pcic-pypi" }
@@ -70,3 +67,9 @@ black = "23.11.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = [
+    "online: marks tests that use an online resource (deselect with '-m \"not online\"')",
+    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
+]
