--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,17 +43,17 @@ priority = "supplemental"
 
 [tool.poetry.group.initial.dependencies]
 # These dependencies must be installed before those in any other groups,
-# including the main dependencies.
+# including the main dependencies.  This is required to install GDAL 3.0.4.
 pip = "22.3.1"
 setuptools = "<58"
-numpy = "^1.21"
+numpy = "<=1.21"  # Required by GDAL 3.0.4, but not declared in that package
 
 [tool.poetry.dependencies]
 python = "^3.8"
 pycds = { version = "^4.4.0",  source = "pcic-pypi" }
 modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
-pydap-extras = { version = "^1.0.0",  source = "pcic-pypi" }
-Pydap = "3.2.2"
+pydap-extras = { version = "^1.1.0",  source = "pcic-pypi" }
+Pydap = "^3.2.2"
 SQLAlchemy = "^1.4"
 pytz = "2018.9"
 simplejson = "^3.16.0"
