Remove tests for Python != 3.8

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -9,10 +9,8 @@ jobs:
     strategy:
       matrix:
         python-version:
+          # At present, only 3.8 is supported.
           - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
 
     steps:
       - name: Checkout
