--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Build and publish project
         env:
-          TWINE_USERNAME: ${{ secrets.pcic_at_pypi_username }}
-          TWINE_PASSWORD: ${{ secrets.pcic_at_pypi_password }}
+          PCIC_PYPI_USERNAME: ${{ secrets.pcic_at_pypi_username }}
+          PCIC_PYPI_PASSWORD: ${{ secrets.pcic_at_pypi_password }}
         run: |
           # Configure Poetry to publish to PCIC private package repository
           # Private repo name is "pcic". We could factor that out as an env var...
