--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -37,8 +37,10 @@ jobs:
           sudo apt list --installed | grep postgres
           sudo apt-get update
           echo "downgrading postgresql-14"
-          # The version of postgresql-14 may periodically require updating. See above.
-          sudo apt-get install -yq --allow-downgrades postgresql-14=14.9-0ubuntu0.22.04.1
+          # The version of postgresql-14 may periodically require updating. To find out what
+          # it must be upgraded to, comment out the following line and read the error message
+          # that results. For more info, see above. (This is a grim procedure.)
+          sudo apt-get install -yq --allow-downgrades postgresql-14=14.11-0ubuntu0.22.04.1
           echo "installing postgresql-14-postgis-3"
           sudo apt-get install -yq postgresql-14-postgis-3
           echo "installing postgresql-plpython3-14"
